--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,8 @@
+
+@font-face {
+    font-family: 'Koulen';
+    src: url('/assets/Koulen-Regular.ttf');
+ }
 p{
     color: #000;
 -webkit-text-stroke-width: 1;
