création du html de ma page "à propos"

--- a/assets/components/footer.css
+++ b/assets/components/footer.css
@@ -39,7 +39,7 @@
   
   .footer__link:hover {
     text-decoration: underline;
-    color: #ffd1c1; /* Subtle hover color */
+    color: #CCC9C9; /* Subtle hover color */
   }
   
   /* Legal Section */
