--- a/src/css/main.css
+++ b/src/css/main.css
@@ -164,6 +164,8 @@ background: rgba(255, 173, 76, 0.00);
 /*CSS PAGE A PROPOS*/
 .main-content {
     padding: 2rem;
+    justify-content: center;
+    align-items: center;
 }
 
 .about {
@@ -183,7 +185,7 @@ text-align:center;
 }
 
 .about__description {
-    width: 355px;
+    width: 360px;
     color: #CF3803;
     font-family: Syne;
     font-size: 14px;
@@ -191,10 +193,11 @@ text-align:center;
     font-weight: var(--sds-typography-body-font-weight-regular);
     line-height: 100%;
     background-color: #FEE9D0;
-padding: 7.548px 8.491px;
-justify-content: center;
-align-items: center;
-gap: 9.435px;
+padding: 15px 15px;
+justify-content: center !important;
+align-items: center !important;
+gap: 9.px;
+border-radius: 20px;
 }
 
 .about__list {
@@ -218,6 +221,7 @@ gap: 9.435px;
 /* Location */
 .location {
     margin-bottom: 2rem;
+    
 }
 
 .location__title {
@@ -233,6 +237,7 @@ gap: 9.435px;
     width: 100%;
     height: 450px;
     border: 0;
+    border-radius: 20px;
 }
 
 /* Gallery */
