rajoute d'une page html + de son css et rectification probleme padding header et footer

--- a/assets/components/footer.css
+++ b/assets/components/footer.css
@@ -4,6 +4,7 @@
     padding: 20px 10px;
     text-align: left;
     font-family: Arial, sans-serif;
+    padding: 0%;
   }
   
   .footer__container {
