--- a/assets/components/menu.css
+++ b/assets/components/menu.css
@@ -3,7 +3,7 @@
     bottom: -10px;
 }
 
-/* Animation du bouton burger pour se transformer en croix */
+
 .menu-btn[aria-expanded="true"] .menu-btnbar::before {
     transform: rotate(45deg);
     top: 0;
@@ -15,10 +15,9 @@
 }
 
 .menu-btn[aria-expanded="true"] {
-    transform: rotate(90deg); /* Fait pivoter le bouton de menu de 90 degrés lorsqu'il est en état "expanded" */
+    transform: rotate(90deg); 
 }
 
-/* Style du menu */
 .menu {
     width: 100%;
     height: 100%;
@@ -27,15 +26,15 @@
     top: 0;
     right: -100%;
     transition: right 0.3s ease, opacity 0.4s ease-in-out; /* Ajoute une transition pour l'opacité */
-    padding-top: 80px; /* Décalage pour le menu */
+    padding-top: 80px; 
     visibility: hidden;
-    opacity: 0; /* Rend le menu complètement transparent */
+    opacity: 0; 
 }
 
 .menu[aria-hidden="false"] {
     right: 0;
-    visibility: visible; /* Rend le menu visible */
-    opacity: 1; /* Rend le menu complètement opaque */
+    visibility: visible; 
+    opacity: 1; 
 }
 
 .menu__list {
@@ -46,7 +45,7 @@
 }
 
 .menu__item {
-    margin: 20px 0;
+    margin: 20px 20px;
 }
 
 .menu__link {
@@ -65,15 +64,15 @@
     color: #FFAD4C;
 }
 
-/* Style pour l'icône du menu (visible en version mobile) */
+
 .menu-icon {
     width: 30px;
     height: auto;
 }
 
-/* On ajoute une classe sur le body pour empêcher le scroll lorsque le menu est ouvert */
+
 .noscroll {
-    overflow: hidden; /* Empêche le défilement de la page */
+    overflow: hidden;
 }
 
     
