--- a/src/css/main.css
+++ b/src/css/main.css
@@ -161,9 +161,9 @@ background: rgba(255, 173, 76, 0.00);
 .bandeau2 {
     margin-top: 0;
     height: 7px; 
-    background-color: #CF3803; 
-    width: 100%; 
-    margin-bottom: 0;  
+    background: #E8914D; 
+    width: 393px; 
+
 }
 .main-content {
     justify-content: center;
@@ -173,6 +173,7 @@ background: rgba(255, 173, 76, 0.00);
 
 .about {
     margin-bottom: 2rem;
+    justify-content: center;
 }
 
 .about__title {
@@ -223,7 +224,8 @@ border-radius: 20px;
 
 /* Location */
 .location {
-    margin-bottom: 2rem;
+    justify-content: center;
+    margin-left: 25px;
     
 }
 
@@ -247,6 +249,8 @@ border-radius: 20px;
 .gallery {
     text-align: center;
     margin-bottom: 2rem;
+    justify-content: center;
+    margin-left: 25px;
 }
 
 .gallery__title {
