--- a/assets/components/footer.css
+++ b/assets/components/footer.css
@@ -5,12 +5,13 @@
     text-align: left !important;
     font-family: Arial, sans-serif;
     padding: 0%;
+    justify-content: left;
   }
   
   .footer__container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: left;
     align-items: flex-start;
     max-width: 1200px;
     margin: 0 auto;
