--- a/assets/components/menu.css
+++ b/assets/components/menu.css
@@ -41,7 +41,7 @@
     list-style: none;
     padding: 0;
     margin: 0;
-    text-align: center;
+    text-align: left;
 }
 
 .menu__item {
@@ -62,6 +62,7 @@
 
 .menu__link:hover {
     color: #FFAD4C;
+    text-align: left;
 }
 
 
