--- a/src/css/main.css
+++ b/src/css/main.css
@@ -207,6 +207,8 @@ background: rgba(255, 173, 76, 0.00);
 .partenaire {
     padding: 20px;
     text-align: center;
+    font-family: 'Koulen';
+    color: #0F2713;
 }
 .partenaire__logos img {
     width: 150px;
@@ -218,18 +220,19 @@ background: rgba(255, 173, 76, 0.00);
     margin-top: 0;
     height: 7px; 
     background: #E8914D; 
-    width: 393px; 
+    width: auto; 
 
 }
 .main-content {
     justify-content: center;
     align-items: center;
-    width: 90%;
+    width: auto;
 }
 
 .about {
     margin-bottom: 2rem;
     justify-content: center;
+    
 }
 
 .about__title {
@@ -253,10 +256,10 @@ text-align:center;
     font-weight: var(--sds-typography-body-font-weight-regular);
     line-height: 100%;
     background-color: #FEE9D0;
-padding: 15px 15px;
+    align-content: center;
 justify-content: center !important;
 align-items: center !important;
-gap: 9.px;
+text-align: center;
 border-radius: 20px;
 }
 
