--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,7 +9,7 @@
 @import "/assets/components/footer.css";
 
 /* src */
-@import "/src/css/main.css"
-
+@import "/src/css/main.css";
+@import "/src/css/normalize.css";
 
 
