--- a/assets/components/footer.css
+++ b/assets/components/footer.css
@@ -41,7 +41,7 @@
   
   .footer__link:hover {
     text-decoration: underline;
-    color: #CCC9C9; /* Subtle hover color */
+    color: #CCC9C9; 
   }
   
   /* Legal Section */
@@ -70,7 +70,7 @@
   .footer__icon {
     width: 100%;
     height: auto;
-    filter: brightness(0) invert(1); /* Make icons white for consistency */
+    filter: brightness(0) invert(1);
   }
   
   .footer__icon:hover {
