--- a/assets/components/menu.css
+++ b/assets/components/menu.css
@@ -16,8 +16,13 @@
 
 .menu-btn[aria-expanded="true"] {
     transform: rotate(90deg); 
+    
 }
 
+.menu-btn{
+    width: fit-content;
+    margin-left: 20px;
+}
 .menu {
     width: 100%;
     height: 100%;
@@ -35,6 +40,7 @@
     right: 0;
     visibility: visible; 
     opacity: 1; 
+    z-index: 100;
 }
 
 .menu__list {
@@ -42,6 +48,8 @@
     padding: 0;
     margin: 0;
     text-align: left;
+    flex-direction: column;
+    flex-wrap: nowrap;
 }
 
 .menu__item {
@@ -73,7 +81,7 @@
 
 .menu-btn {
     position: relative;
-    z-index: 10;
+    z-index: 101;
 }
 
 
